infrastructure/longhorn-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    tailscale.com/https: "true"
    tailscale.com/tags: tag:k8s
spec:
  ingressClassName: tailscale
  tls:
  - hosts:
    - longhorn
  rules:
  - host: longhorn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
